[package]
name = "peng-shop-interface-tui"
version = "0.1.0"
authors = ["Imo Hester <vortex@z-ray.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peng-shop-backend = {git = "https://github.com/VortexAcherontic/peng-shop-backend"}